typesafe-builders/tests/ui/reject/field_attr/decay/no_generic.stderr
error: Can only decay generic types
 --> tests/ui/reject/field_attr/decay/no_generic.rs:7:6
  |
7 |         x: u8,
  |            ^^
